# media-catalog-vinyls

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
docs/: .gitignore  _quarto.yml  about.qmd  index.qmd  release-process.md
docs/_site/: about.html  index.html
scripts/: db_maintenance.py  snapshots.py
src/: project_meta.py
src/backend/: config.py  database.py  discogs_client.py  main.py  normalizers.py
src/backend/schemas/: __init__.py  discogs.py  snapshots.py  vinilos.py  vinilos_raw.py
src/backend/services/: __init__.py  cover_images.py  export.py  snapshots.py  vinilos.py  vinilos_raw.py
src/frontend/: app.py  utils.py
src/frontend/pages/: 01_api_discogs.py  02_revision.py  03_exportacion.py  04_datos.py
tests/: test_api.py  test_project_meta.py
tests/fixtures/: secciones.csv
tools/: README.md  launch-app.bat  launch-app.desktop  launch-app.sh  run-make-target.bat  run-make-target.sh  set-up-app.bat  set-up-app.desktop  set-up-app.sh  stop-app.bat  stop-app.desktop  stop-app.sh  update-app.bat  update-app.desktop  update-app.sh
