[project]
name = "media-catalog-vinyls"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn",
  "streamlit",
  "duckdb",
  "requests",
  "discogs-client"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
  "black",
  "ruff"
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
